[package]
name = "netconf-rs"
version = "0.2.6"
authors = ["Jiajie Chen <c@jia.je>"]
description = "A Rust library for NETCONF(RFC 6241)"
readme = "README.md"
repository = "https://github.com/jiegec/netconf-rs"
license = "MIT"
edition = "2021"
rust-version = "1.75.0"


[dependencies]
log = "0.4.20"
memmem = "0.1.1"
serde-xml-rs = "0.8.0"
serde = "1.0.196"
serde_derive = "1.0.196"

ssh2 = { version = "0.9.4", optional = true }
russh = { version = "0.57", optional = true }
russh-keys = { version = "0.49", optional = true }
tokio = { version = "1.35", features = ["net"], optional = true }
async-trait = { version = "0.1", optional = true }


[dev-dependencies]
env_logger = "0.11.1"

[features]
default = ["ssh2"]
ssh2 = ["dep:ssh2"]
russh = ["dep:russh", "dep:russh-keys", "dep:tokio", "dep:async-trait"]
